4.3.1. Collection API Улучшения [#207452]