@@ -2,7 +2,6 @@ package lambda;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -12,21 +11,21 @@ public class FunctionRangeTest {
     @Test
     public void whenLinearFunctionThenLinearResults() {
         List<Double> result = FunctionRange.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenQuadraticFunctionThenQuadraticResults() {
         List<Double> result = FunctionRange.diapason(5, 8, x -> x * x);
-        List<Double> expected = Arrays.asList(25D, 36D, 49D);
+        List<Double> expected = List.of(25D, 36D, 49D);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenExponentialFunctionThenExponentialResults() {
         List<Double> result = FunctionRange.diapason(5, 8, x -> Math.pow(2, x));
-        List<Double> expected = Arrays.asList(32D, 64D, 128D);
+        List<Double> expected = List.of(32D, 64D, 128D);
         assertThat(result, is(expected));
     }
 
