@@ -2,7 +2,6 @@ package stream;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -15,7 +14,7 @@ public class MatrixToListTest {
         Integer[][] matrix = {{2, 3}, {3, 5}, {7, 9}};
         MatrixToList mtl = new MatrixToList();
         List<Integer> result = mtl.covertMatrixToList(matrix);
-        List<Integer> expected = Arrays.asList(2, 3, 3, 5, 7, 9);
+        List<Integer> expected = List.of(2, 3, 3, 5, 7, 9);
         assertThat(result, is(expected));
     }
 }
